--- a/assets/templates/assets/index.html
+++ b/assets/templates/assets/index.html
@@ -23,106 +23,116 @@
 {% block content %}
     <!-- Main content -->
     <section class="content">
-      <div class="row">
-        <div class="col-xs-12">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="box">
+                    <!--
+                    <div class="box-header">
+                        <h3 class="box-title">资产总表<small>(含软件)</small></h3>
+                    </div>
+                    -->
+                    <!-- /.box-header -->
+                    <div class="box-body">
+                        <table id="assets_table" class="table table-bordered table-striped">
+                            <thead>
+                                <tr>
+                                    <th>序号</th>
+                                    <th>资产类型</th>
+                                    <th>子类型</th>
+                                    <th>资产名称</th>
+                                    <th>SN</th>
+                                    <th>业务线</th>
+                                    <th>状态</th><!---->
+                                    <th>机房</th>
+                                    <th>更新日期</th>
+                                    <th>标签</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for asset in assets %}
+                                <tr>
+                                    <td>{{ forloop.counter }}</td>
+                                    {% if asset.asset_type == 'server' %}
+                                        <td class="text-green text-bold">{{ asset.get_asset_type_display }}</td>
+                                        <td>{{ asset.server.get_sub_asset_type_display }}</td>
+                                    {% elif asset.asset_type == 'networkdevice' %}
+                                        <td class="text-yellow text-bold">{{ asset.get_asset_type_display }}</td>
+                                        <td>{{ asset.networkdevice.get_sub_asset_type_display }}</td>
+                                    {% elif asset.asset_type == 'storagedevice' %}
+                                        <td class="text-blue text-bold">{{ asset.get_asset_type_display }}</td>
+                                        <td>{{ asset.storagedevice.get_sub_asset_type_display }}</td>
+                                    {% elif asset.asset_type == 'securitydevice' %}
+                                        <td class="text-red text-bold">{{ asset.get_asset_type_display }}</td>
+                                        <td>{{ asset.securitydevice.get_sub_asset_type_display }}</td>
+                                    {% elif asset.asset_type == 'software' %}
+                                        <td class="text-orange text-bold">{{ asset.get_asset_type_display }}</td>
+                                        <td>{{ asset.software.get_sub_asset_type_display }}</td>
+                                    {% endif %}
+                                    <td><a href="{% url 'assets:detail' asset.id %}">{{ asset.name }}</a></td>
+                                    <td>{{ asset.sn }}</td>
+                                    <td>{{ asset.business_unit|default_if_none:"_" }}</td>
 
-        <div class="box">
-        <div class="box-header">
-            <h3 class="box-title">资产总表<small>(含软件)</small></h3>
-        </div>
-        <!-- /.box-header -->
-        <div class="box-body">
-          <table id="assets_table" class="table table-bordered table-striped">
-            <thead>
-            <tr>
-                <th>序号</th>
-                <th>资产类型</th>
-                <th>子类型</th>
-                <th>资产名称</th>
-                <th>SN</th>
-                <th>业务线</th>
-                <th>状态</th>
-                <th>机房</th>
-                <th>更新日期</th>
-                <th>标签</th>
-            </tr>
-            </thead>
-            <tbody>
+                                    <!--<td><label class="label label-primary">{{ asset.get_status_display }}</label></td>-->
 
-                {% for asset in assets %}
-                <tr>
-                    <td>{{ forloop.counter }}</td>
-                    {% if asset.asset_type == 'server' %}
-                        <td class="text-green text-bold">{{ asset.get_asset_type_display }}</td>
-                        <td>{{ asset.server.get_sub_asset_type_display }}</td>
-                    {% elif asset.asset_type == 'networkdevice' %}
-                        <td class="text-yellow text-bold">{{ asset.get_asset_type_display }}</td>
-                        <td>{{ asset.networkdevice.get_sub_asset_type_display }}</td>
-                    {% elif asset.asset_type == 'storagedevice' %}
-                        <td class="text-blue text-bold">{{ asset.get_asset_type_display }}</td>
-                        <td>{{ asset.storagedevice.get_sub_asset_type_display }}</td>
-                    {% elif asset.asset_type == 'securitydevice' %}
-                        <td class="text-red text-bold">{{ asset.get_asset_type_display }}</td>
-                        <td>{{ asset.securitydevice.get_sub_asset_type_display }}</td>
-                    {% elif asset.asset_type == 'software' %}
-                        <td class="text-orange text-bold">{{ asset.get_asset_type_display }}</td>
-                        <td>{{ asset.software.get_sub_asset_type_display }}</td>
-                    {% endif %}
-                    <td><a href="{% url 'assets:detail' asset.id %}">{{ asset.name }}</a></td>
-                    <td>{{ asset.sn }}</td>
-                    <td>{{ asset.business_unit|default_if_none:"_" }}</td>
-                    {% if asset.status == 0 %}
-                        <td><label class="label label-primary">{{ asset.get_status_display }}</label></td>
-                    {% elif asset.status == 1 %}
-                        <td><label class="label label-success">{{ asset.get_status_display }}</label></td>
-                    {% elif asset.status == 2 %}
-                        <td><label class="label label-warning">{{ asset.get_status_display }}</label></td>
-                    {% elif asset.status == 3 %}
-                        <td><label class="label label-default">{{ asset.get_status_display }}</label></td>
-                    {% elif asset.status == 4 %}
-                        <td><label class="label label-danger">{{ asset.get_status_display }}</label></td>
-                    {% elif asset.status == 5 %}
-                        <td><label class="label label-info">{{ asset.get_status_display }}</label></td>
-                    {% endif %}
-                    <td>{{ asset.idc|default:"_" }}</td>
-                    <td>{{ asset.modify_time|date:"Y/m/d [H:m:s]" }}
-                    <td>
-                        {% for tag in asset.tags.all %}
-                            <label class="label label-primary">{{ tag.name }}</label>
-                        {% empty %}
-                            -
-                        {% endfor %}
-                    </td>
-                </tr>
-                {% empty %}
-                    <tr>没有数据！</tr>
-                {% endfor %}
-            </tbody>
-          <!--
-            <tfoot>
-            <tr>
-                <th>序号</th>
-                <th>资产类型</th>
-                <th>子类型</th>
-                <th>资产名称</th>
-                <th>SN</th>
-                <th>业务线</th>
-                <th>状态</th>
-                <th>机房</th>
-                <th>更新日期</th>
-                <th>标签</th>
-            </tr>
-            </tfoot>
-            -->
-          </table>
+                                    {% if asset.status == 0 %}
+                                        <td><label class="label label-primary">{{ asset.get_status_display }}</label></td>
+                                    {% elif asset.status == 1 %}
+                                        <td><label class="label label-success">{{ asset.get_status_display }}</label></td>
+                                    {% elif asset.status == 2 %}
+                                        <td><label class="label label-warning">{{ asset.get_status_display }}</label></td>
+                                    {% elif asset.status == 3 %}
+                                        <td><label class="label label-default">{{ asset.get_status_display }}</label></td>
+                                    {% elif asset.status == 4 %}
+                                        <td><label class="label label-danger">{{ asset.get_status_display }}</label></td>
+                                    {% elif asset.status == 5 %}
+                                        <td><label class="label label-info">{{ asset.get_status_display }}</label></td>
+                                    {% elif asset.status == 6 %}
+                                        <td><label class="label label-info">{{ asset.get_status_display }}</label></td>
+                                    {% elif asset.status == 7 %}
+                                        <td><label class="label label-default">{{ asset.get_status_display }}</label></td>
+                                    {# 注意，这里必须要有 else ,否则当 asset.status 匹配不到时，dataTables 表格工具栏将无法显示 #}
+                                    {% else %}
+                                        <td><label class="label label-info">{{ asset.get_status_display }}</label></td>
+                                    {% endif %}
+                                    <td>{{ asset.idc|default:"_" }}</td>
+                                    <td>{{ asset.modify_time|date:"Y/m/d [H:m:s]" }}</td>
+                                    <td>
+                                        {% for tag in asset.tags.all %}
+                                            <label class="label label-primary">{{ tag.name }}</label>
+                                        {% empty %}
+                                            -
+                                        {% endfor %}
+                                    </td>
+                                </tr>
+                                {% empty %}
+                                    <tr>没有数据！</tr>
+                                {% endfor %}
+                            </tbody>
+                            <!--
+                            <tfoot>
+                            <tr>
+                                <th>序号</th>
+                                <th>资产类型</th>
+                                <th>子类型</th>
+                                <th>资产名称</th>
+                                <th>SN</th>
+                                <th>业务线</th>
+                                <th>状态</th>
+                                <th>机房</th>
+                                <th>更新日期</th>
+                                <th>标签</th>
+                            </tr>
+                            </tfoot>
+                            -->
+                        </table>
+                    </div>
+                    <!-- /.box-body -->
+                </div>
+                <!-- /.box -->
+            </div>
+            <!-- /.col -->
         </div>
-        <!-- /.box-body -->
-        </div>
-        <!-- /.box -->
-        </div>
-        <!-- /.col -->
-      </div>
-    <!-- /.row -->
+        <!-- /.row -->
     </section>
 
 {% endblock %}
