--- a/templates/base.html
+++ b/templates/base.html
@@ -56,9 +56,9 @@ desired effect
     <!-- Logo -->
     <a href="#" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>CMDB</b></span>
+      <span class="logo-mini"><b>CM</b>s</span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>CMDB</b></span>
+      <span class="logo-lg"><b>CMDB</b>s</span>
     </a>
 
     <!-- Header Navbar -->
@@ -86,7 +86,7 @@ desired effect
                     <a href="#">
                       <div class="pull-left">
                         <!-- User Image -->
-                        <img src="{% static 'adminlte-2.4.10/dist/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
+                        <img src="{% static 'adminlte-2.4.10/dist/img/user3-128x128.jpg' %}" class="img-circle" alt="User Image">
                       </div>
                       <!-- Message title and timestamp -->
                       <h4>
@@ -99,6 +99,7 @@ desired effect
                   </li>
                   <!-- end message -->
                 </ul>
+
                 <!-- /.menu -->
               </li>
               <li class="footer"><a href="#">See All Messages</a></li>
@@ -171,21 +172,24 @@ desired effect
             <!-- Menu Toggle Button -->
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <!-- The user image in the navbar-->
-              <img src="{% static 'adminlte-2.4.10/dist/img/user2-160x160.jpg' %}" class="user-image" alt="User Image">
+              <img src="{% static 'adminlte-2.4.10/dist/img/user3-128x128.jpg' %}" class="user-image" alt="User Image">
               <!-- hidden-xs hides the username on small devices so only the image appears. -->
-              <span class="hidden-xs">系统管理员</span>
+              <span class="hidden-xs">
+                  {{ request.user.username|default:"系统管理员" }}
+              </span>
             </a>
             <ul class="dropdown-menu">
               <!-- The user image in the menu -->
               <li class="user-header">
-                <img src="{% static 'adminlte-2.4.10/dist/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
+                <img src="{% static 'adminlte-2.4.10/dist/img/user3-128x128.jpg' %}" class="img-circle" alt="User Image">
 
                 <p>
-                  系统管理员
+                  {{ request.user.username|default:"系统管理员" }}
                   <small>2019-4-12</small>
                 </p>
               </li>
               <!-- Menu Body -->
+              <!--
               <li class="user-body">
                 <div class="row">
                   <div class="col-xs-4 text-center">
@@ -198,15 +202,16 @@ desired effect
                     <a href="#">Friends</a>
                   </div>
                 </div>
-                <!-- /.row -->
+
               </li>
+              -->
               <!-- Menu Footer-->
               <li class="user-footer">
                 <div class="pull-left">
-                  <a href="#" class="btn btn-default btn-flat">Profile</a>
+                  <a href="{% url 'accounts:user_info' %}" class="btn btn-default btn-flat">Profile</a>
                 </div>
                 <div class="pull-right">
-                  <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                  <a href="{% url 'accounts:logout' %}" class="btn btn-default btn-flat">Sign out</a>
                 </div>
               </li>
             </ul>
@@ -225,10 +230,10 @@ desired effect
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel">
         <div class="pull-left image">
-          <img src="{% static 'adminlte-2.4.10/dist/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
+          <img src="{% static 'adminlte-2.4.10/dist/img/user3-128x128.jpg' %}" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
-          <p>Admin</p>
+          <p>{{ request.user.username|default:"系统管理员" }}</p>
           <!-- Status -->
           <a href="#"><i class="fa fa-circle text-success"></i>在线</a>
         </div>
@@ -264,40 +269,52 @@ desired effect
         </li>
         <li class="treeview asset_list">
             <a href="#">
-                <i class="fa fa-server"></i>资源管理
+                <i class="fa fa-server"></i>
+                <span>资源管理</span>
                 <span class="pull-right-container">
                     <i class="fa fa-angle-left pull-right"></i>
                 </span>
             </a>
             <ul class="treeview-menu">
                 <!-- 使用urlconf的名称空间网址; asset_type='server' 表示传入关键字参数 -->
-                <li><a href="{% url 'assets:asset_list' asset_type='server' %}"><i class="fa"></i>服务器</a></li>
-                <li><a href="{% url 'assets:asset_list' asset_type='networkdevice' %}"><i class="fa"></i>网络设备</a></li>
-                <li><a href="{% url 'assets:asset_list' asset_type='storagedevice' %}"><i class="fa"></i>存储设备</a></li>
-                <li><a href="{% url 'assets:asset_list' asset_type='securitydevice' %}"><i class="fa"></i>安全设备</a></li>
-                <li><a href="{% url 'assets:asset_list' asset_type='software' %}"><i class="fa"></i>软件</a></li>
-                <li><a href="{% url 'assets:asset_list' asset_type=5 %}"><i class="fa"></i>业务</a></li>
-                <li><a href="{% url 'assets:asset_list' asset_type=6 %}"><i class="fa"></i>厂商</a></li>
-                <li><a href="{% url 'assets:asset_list' asset_type=7 %}"><i class="fa"></i>合同</a></li>
-                <li><a href="{% url 'assets:asset_list' asset_type=8 %}"><i class="fa"></i>机房</a></li>
-                <li><a href="{% url 'assets:asset_list' asset_type=9 %}"><i class="fa"></i>标签</a></li>
+                <li><a href="{% url 'assets:asset_list' asset_type='server' %}"><i class="fa fa-circle-o"></i>服务器</a></li>
+                <li><a href="{% url 'assets:asset_list' asset_type='networkdevice' %}"><i class="fa fa-circle-o"></i>网络设备</a></li>
+                <li><a href="{% url 'assets:asset_list' asset_type='storagedevice' %}"><i class="fa fa-circle-o"></i>存储设备</a></li>
+                <li><a href="{% url 'assets:asset_list' asset_type='securitydevice' %}"><i class="fa fa-circle-o"></i>安全设备</a></li>
+                <li><a href="{% url 'assets:asset_list' asset_type='software' %}"><i class="fa fa-circle-o"></i>软件</a></li>
+                <li><a href="{% url 'assets:asset_list' asset_type=5 %}"><i class="fa fa-circle-o"></i>业务</a></li>
+                <li><a href="{% url 'assets:asset_list' asset_type=6 %}"><i class="fa fa-circle-o"></i>厂商</a></li>
+                <li><a href="{% url 'assets:asset_list' asset_type=7 %}"><i class="fa fa-circle-o"></i>合同</a></li>
+                <li><a href="{% url 'assets:asset_list' asset_type=8 %}"><i class="fa fa-circle-o"></i>机房</a></li>
+                <li><a href="{% url 'assets:asset_list' asset_type=9 %}"><i class="fa fa-circle-o"></i>标签</a></li>
             </ul>
         </li>
+
         <li class="treeview event">
-            <a href="#"><i class="fa fa-arrow-circle-o-down"></i>运营分析
+            <a href="#"><i class="fa fa-arrow-circle-o-down"></i>
+                <span>运营分析</span>
                 <span class="pull-right-container">
                     <i class="fa fa-angle-left pull-right"></i>
                 </span>
             </a>
             <ul class="treeview-menu">
-              <li><a href="#"><i class="fa"></i>报表查询</a></li>
-              <li><a href="{% url 'assets:event' %}"><i class="fa"></i>事件记录</a></li>
+                <li><a href="#"><i class="fa"></i>报表查询</a></li>
+                <li><a href="{% url 'assets:event' %}"><i class="fa"></i>
+                  事件记录</a></li>
             </ul>
         </li>
-        <li><a href="#"><i class="fa fa-circle-o"></i>用户管理</a></li>
+        <li class="users">
+            <a href="{% url 'accounts:users_list' %}"><i class="fa fa-circle-o"></i>
+                <span>用户管理</span>
+            </a>
             <ul class="treeview-menu"></ul>
-        <li><a href="#"><i class="fa fa-circle-o"></i>系统管理</a></li>
+        </li>
+        <li class="treeview sys_manage">
+            <a href="#"><i class="fa fa-circle-o"></i>
+                <span>系统管理</span>
+            </a>
             <ul class="treeview-menu"></ul>
+        </li>
       </ul>
       <!-- /.sidebar-menu -->
     </section>
